--- a/monitor/templates/monitor/partials/metrics.html
+++ b/monitor/templates/monitor/partials/metrics.html
@@ -23,20 +23,20 @@
 
     <div class="col-md-3">
         <div class="card text-white bg-warning mb-3 shadow">
-            <div class="card-header">{% trans "Disk" %}</div>
+            <div class="card-header">{% trans "Virtual Memory" %}</div>
             <div class="card-body">
-                <h1 class="card-title">{{ disk_metric }}%</h1>
-                <p class="card-text"><i class="fa-solid fa-hard-drive"></i> {% trans "Disk Usage" %}</p>
+                <h1 class="card-title">{{ swap_metric }}%</h1>
+                <p class="card-text"><i class="fa-solid fa-memory"></i> {% trans "Swap/Virtual" %}</p>
             </div>
         </div>
     </div>
 
     <div class="col-md-3">
         <div class="card text-white bg-danger mb-3 shadow">
-            <div class="card-header">GPU</div>
+            <div class="card-header">{% trans "Disk" %}</div>
             <div class="card-body">
-                <h1 class="card-title">--</h1>
-                <p class="card-text"><i class="fa-solid fa-tv"></i> N/A</p>
+                <h1 class="card-title">{{ disk_metric }}%</h1>
+                <p class="card-text"><i class="fa-solid fa-hard-drive"></i> {% trans "Disk Usage" %}</p>
             </div>
         </div>
     </div>
